--- a/.travis.yml
+++ b/.travis.yml
@@ -7,4 +7,9 @@ node_js:
   - "4.1"
   - "4.0"
 
+before_script:
+  - "export DISPLAY=:99.0"
+  - "sh -e /etc/init.d/xvfb start"
+  - sleep 3
+  
 after_script: "npm run test"
